--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_calendar">calendar</string>
     <string name="title_activity_view_schedule">ViewSchedule</string>
+    <string name="title_activity_tab_host_schedule">TabHostSchedule</string>
 </resources>
