--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_calendar">calendar</string>
     <string name="title_activity_view_schedule">ViewSchedule</string>
     <string name="title_activity_view_details">ViewDetails</string>
+    <string name="title_activity_schedule_list_view">ScheduleListView</string>
 </resources>
