--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="title_activity_plan_choices_by_taxi">PlanChoicesByTaxi</string>
     <string name="title_activity_plan_choices_by_public_transport">PlanChoicesByPublicTransport
     </string>
+    <string name="title_activity_schedule_tab_switch">ScheduleTabSwitch</string>
 </resources>
