places from categories added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     </string>
     <string name="title_activity_schedule_tab_switch">ScheduleTabSwitch</string>
     <string name="title_activity_maps_viewer">Map</string>
+    <string name="title_activity_places_list_view">PlacesListView</string>
 </resources>
